[gd_scene load_steps=12 format=2]

[ext_resource path="res://DEV_ExampleUsages/Ex_CharacterTemplate/Ex_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Misc/PlatformerSprite/PlatformerSprite.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Dash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shooting Dash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shooting Idle"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 10 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Shooting Jump"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Shooting Walk"
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 13, 12 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Walk"
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 2 ]
}

[node name="PlatformerSprite" type="Sprite"]
texture = ExtResource( 1 )
vframes = 2
hframes = 10
script = ExtResource( 2 )

[node name="CharacterPlatformerAnimation" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 1 )
anims/Dash = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
"anims/Shooting Dash" = SubResource( 5 )
"anims/Shooting Idle" = SubResource( 6 )
"anims/Shooting Jump" = SubResource( 7 )
"anims/Shooting Walk" = SubResource( 8 )
anims/Walk = SubResource( 9 )

[node name="NormalAttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
[connection signal="timeout" from="NormalAttackCooldown" to="." method="_on_NormalAttackCooldown_timeout"]
